--- a/indexx.html
+++ b/indexx.html
@@ -22,10 +22,11 @@
 						<div class="item_list">
 			<ul>
 				
-			<a href="#"><span class="item1">Market</span></a>
-			<a href="#"><span class="item2">Features</span></a>
+			<a href="https://living-legend001.github.io/Updated-Market/market.html"><span class="item1">Market</span></a>
+			<a href="https://living-legend001.github.io/New-Third/"><span class="item2">Features</span></a>
 			<a href="#"><span class="item3">White_Papers</span></a>
-			<a href="#"><span class="item4">About_Us</span></a>
+			<a href="https://living-legend001.github.io/New-Full-Project/new.html"><span class="item4">About_Us</span></a>
+				
 			
 			</ul>
 						</div>
